--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <link rel="dns-prefetch" href="http://yoursite.com">
   <title>beautiful_girl</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <meta property="og:type" content="website">
+  <meta name="description" content="John Doe">
+<meta property="og:type" content="website">
 <meta property="og:title" content="beautiful_girl">
 <meta property="og:url" content="http://yoursite.com/index.html">
 <meta property="og:site_name" content="beautiful_girl">
+<meta property="og:description" content="John Doe">
 <meta property="og:locale" content="timezone:# URL##If your site is put in a subdirectory, set url as'http://yoursite.com/child' and root as '/child/'">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="beautiful_girl">
+<meta name="twitter:description" content="John Doe">
   
     <link rel="alternative" href="/atom.xml" title="beautiful_girl" type="application/atom+xml">
   
